--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>LACOSTE LOOKBOOK</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
-    <!--<script type="text/javascript" src="js/common.js"></script>!-->
 </head>
 
 <body>
@@ -269,6 +268,7 @@
         $("#equipe .block-content .content-partie .intro-partie .col").removeClass("active").removeClass("blur");
     });
 </script>
+<script type="text/javascript" src="js/common.js"></script>!
 </body>
 
 </html>
