--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LACOSTE LOOKBOOK</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
-    <!--<script type="text/javascript" src="js/common.js"></script>!-->
+    <script type="text/javascript" src="js/common.js"></script>
 </head>
 
 <body>
@@ -203,7 +203,7 @@
 
         /*menu*/
         $(".menu nav").css({
-            height: wh-131
+            height: wh-76
         });
         
         /*main*/
