--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
             $(this).addClass("in");
             $(".menu").addClass("show");
             $(".main-mask").addClass("show");
-        }
-        else {
+        } else {
             $(this).removeClass("in");
             $(".menu").removeClass("show");
             $(".main-mask").removeClass("show");
@@ -292,8 +291,12 @@
         $(".menu-button").removeClass("in");
         $(".menu").removeClass("show");
     });
+
+    $(window).resize(function(){
+        setContentSize();
+    });
 </script>
-<script type="text/javascript" src="js/common.js"></script>!
+<script type="text/javascript" src="js/common.js"></script>
 </body>
 
 </html>
