--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <!-- END LOADING PAGE -->
 
     <!-- Portrait -->
-    <div class="portrait-box">
+    <!-- <div class="portrait-box">
         <h1><a href="javascript:;"><img src="css/img/logo.png" alt=""></a></h1>
         <div class="gif">
             <p>转至横屏，体验更佳</p>
@@ -191,7 +191,8 @@
             <a target="_blank" href="javascript:;">法律声明条款</a>
             <a target="_blank" href="javascript:;">ICP</a>
         </footer>
-    </div>
+        
+    </div> -->
     <!-- END PORTRAIT -->
 
 <script>
