--- a/portrait.html
+++ b/portrait.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+    <script type="text/javascript">
+        
+        //判断手机横竖屏状态：  
+        function get_orientation(){  
+            if(window.orientation==90||window.orientation==-90){  
+                window.location.href = 'index.html';
+            }  
+        }
+        get_orientation();
+        window.addEventListener("onorientationchange" in window ? "orientationchange" : "resize", get_orientation, false);  
+    </script>
     <!-- Menu -->
     <button class="menu-button"><span>Menu</span></button>
     <aside class="menu">
