--- a/portrait.html
+++ b/portrait.html
@@ -65,6 +65,10 @@
     <!-- END PORTRAIT -->
 
 <script>
+$(document).on('touchmove',function(e) {
+        e.preventDefault();
+    });
+
     /*set content size*/
     function setContentSize() {
         var ww = $(window).width();
@@ -74,75 +78,12 @@
         $(".menu nav").css({
             height: wh-76
         });
-        
-        /*main*/
-        $(".main").css({width: ww, height: wh});
-        $(".intro-partie").css({width: ww*0.62, height: wh});
-        $("#equipe .block-content .content-partie .intro-partie .col").css({
-            width: (ww*0.62-30)/3,
-            height: (ww*0.62-30)/1.5
-        });
-        $("#equipe .block-content .content-partie .intro-partie .col#man-1").css({
-            bottom: (ww*0.62-30)/4
-        });
-        $("#equipe .block-content .content-partie .intro-partie .col#man-2").css({
-            marginLeft: -(ww*0.62-30)/6,
-            bottom: (ww*0.62-30)/3.5
-        });
-        $("#equipe .block-content .content-partie .intro-partie .col#man-3").css({
-            bottom: (ww*0.62-30)/4
-        });
-        $("#equipe .block-content .content-partie .intro-partie .col#man-5").css({
-            marginLeft: -(ww*0.62-30)/6
-        });
-        $("#equipe .block-content .content-partie .intro-partie footer").css({
-            width: ww,
-            height: (ww*0.62-30)/3.5,
-            left: -(ww*0.19)
-        });
-
-        /*detail-box*/
-        $(".detail-box").css({
-            width: ww*0.3,
-            height: ww*0.4,
-            maxHeight: wh-20
-        });
-        $(".detail-box img").css({
-            height: ww*0.45-40-14-20-14-10-35,
-            maxHeight: wh-20-40-14-20-14-10-35
-        });
-        $(".for_man-1, .for_man-4").css({marginLeft: -((ww*0.62-30)/6)});
-        $(".for_man-3, .for_man-6").css({marginRight: -((ww*0.62-30)/6)});
-        if(ww<481) {
-            $(".detail-box img").css({
-                height: ww*0.3-40-14-20-14-10-55,
-                maxHeight: wh-20-40-14-20-14-10-55
-            });
-        }
-        
     };
     setContentSize();
 
     $(window).resize(function(){
         setContentSize();
     }).resize();
-
-    /*Product Detail*/
-    $("#equipe .block-content .content-partie .intro-partie .col").click(function(){
-        var _id=$(this).attr('id');
-        var _detail = $('.detail-box.for_'+_id);
-        $(".main").addClass("white");
-        $(this).siblings(".col").addClass("blur");
-        $(this).siblings(".col").removeClass("active");
-        $(this).removeClass("blur");
-        $(this).addClass("active");
-        _detail.addClass("show");
-    });
-    $(".detail-box .close").click(function(){
-        $(".detail-box").removeClass("show");
-        $(".main").removeClass("white");
-        $("#equipe .block-content .content-partie .intro-partie .col").removeClass("active").removeClass("blur");
-    });
 
     /*menu*/
     $(".menu-button").click(function(){
