--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         setContentSize();
     });
 </script>
-<script type="text/javascript" src="js/common.js"></script>
+<!-- <script type="text/javascript" src="js/common.js"></script> -->
 </body>
 
 </html>
