--- a/index.html
+++ b/index.html
@@ -57,76 +57,102 @@
                                 <div _index="0" class="col" id="man-1">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/jc-nb.jpg" alt="photo jc nb">
+                                            <img src="images/model/MAN1-3.png" alt="photo jc nb">
+                                        </div>
+                                        <div class="white-photo" style="display:none;">
+                                            <img src="images/model/MAN1-5.png" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="jc" class="photo-viensla" src="images/model/man_1_dressed.png" alt="photo jc follomaton">
+                                            <img id="jc" class="photo-viensla" src="images/model/MAN1-1.png" alt="photo jc follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="1" class="col" id="man-2">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/nico-nb.jpg" alt="photo nico nb">
+                                            <img src="images/model/MAN2-3.png" alt="photo nico nb">
+                                        </div>
+                                        <div class="white-photo" style="display:none;">
+                                            <img src="images/model/MAN2-5.png" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="niko" class="photo-viensla" src="images/model/man_2_dressed.png" alt="photo nico follomaton">
+                                            <img id="niko" class="photo-viensla" src="images/model/MAN2-1.png" alt="photo nico follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="2" class="col" id="man-3">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/fred-nb.jpg" alt="photo fred nb">
+                                            <img src="images/model/MAN3-3.png" alt="photo fred nb">
+                                        </div>
+                                        <div class="white-photo" style="display:none;">
+                                            <img src="images/model/MAN3-5.png" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="fred" class="photo-viensla" src="images/model/man_3_dressed.png" alt="photo fred follomaton">
+                                            <img id="fred" class="photo-viensla" src="images/model/MAN3-1.png" alt="photo fred follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="3" class="col" id="man-4">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/fred-nb.jpg" alt="photo fred nb">
+                                            <img src="images/model/MAN4-3.png" alt="photo fred nb">
+                                        </div>
+                                        <div class="white-photo" style="display:none;">
+                                            <img src="images/model/MAN4-5.png" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="fred" class="photo-viensla" src="images/model/man_2_dressed.png" alt="photo fred follomaton">
+                                            <img id="fred" class="photo-viensla" src="images/model/MAN4-1.png" alt="photo fred follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="4" class="col" id="man-5">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/nico-nb.jpg" alt="photo nico nb">
+                                            <img src="images/model/MAN5-3.png" alt="photo nico nb">
+                                        </div>
+                                        <div class="white-photo" style="display:none;">
+                                            <img src="images/model/MAN5-5.png" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="niko" class="photo-viensla" src="images/model/man_3_dressed.png" alt="photo nico follomaton">
+                                            <img id="niko" class="photo-viensla" src="images/model/MAN5-1.png" alt="photo nico follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="5" class="col" id="man-6">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/jc-nb.jpg" alt="photo jc nb">
+                                            <img src="images/model/MAN6-3.png" alt="photo jc nb">
+                                        </div>
+                                        <div class="white-photo" style="display:none;">
+                                            <img src="images/model/MAN6-5.png" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="jc" class="photo-viensla" src="images/model/man_1_dressed.png" alt="photo jc follomaton">
+                                            <img id="jc" class="photo-viensla" src="images/model/MAN6-1.png" alt="photo jc follomaton">
                                         </div>
                                     </div>
                                 </div>
-                                <footer>
+                                <div class="click-fix-4"></div>
+                                <div class="click-fix-5"></div>
+                                <div class="click-fix-6"></div>
+                                <div class="bench"></div>
+                                <div class="ground"><img src="css/img/ground.png" alt=""></div>
+                                <!-- <footer>
                                     <ul>
                                         <li>左右滑动网球</li>
                                         <li>点击模特<br>查看商品详情</li>
                                     </ul>
-                                </footer>
+                                </footer> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="ribbon ribbon-blue"></div>
+            <div class="ribbon ribbon-red"></div>
+            <div class="ribbon ribbon-green"></div>
         </div>
-        </div>
+        <div class="racket"><img src="css/img/racket.png" alt=""></div>
         <div id="tennisball" style="z-index:999;position:absolute;">
             <img style="width:50px;height:50px;" src="css/img/tennis.png">
         </div>
@@ -138,42 +164,42 @@
         <h3>LT12限量系列灰色T恤衫</h3>
         <img src="images/product/01.png" alt="">
         <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.htm">立即购买</a>
+        <a target="_blank" href="http://item.jd.com/1543278289.html">立即购买</a>
     </div>
     <div class="detail-box for_man-2">
         <button class="close">关闭</button>
-        <h3>LT12限量系列灰色T恤衫</h3>
-        <img src="images/product/01.png" alt="">
-        <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.htm">立即购买</a>
+        <h3>LT12限量系列蓝色POLO衫</h3>
+        <img src="images/product/02.png" alt="">
+        <span class="price">价格：990 元</span>
+        <a target="_blank" href="http://item.jd.com/1543281789.html">立即购买</a>
     </div>
     <div class="detail-box for_man-3">
         <button class="close">关闭</button>
-        <h3>LT12限量系列灰色T恤衫</h3>
-        <img src="images/product/01.png" alt="">
+        <h3>限量系列白色T恤衫</h3>
+        <img src="images/product/03.png" alt="">
         <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.htm">立即购买</a>
+        <a target="_blank" href="http://item.jd.com/1494360810.html">立即购买</a>
     </div>
     <div class="detail-box for_man-4">
         <button class="close">关闭</button>
-        <h3>LT12限量系列灰色T恤衫</h3>
-        <img src="images/product/01.png" alt="">
+        <h3>LT12限量系列蓝色T恤衫</h3>
+        <img src="images/product/04.png" alt="">
         <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.htm">立即购买</a>
+        <a target="_blank" href="http://item.jd.com/1543278289.html">立即购买</a>
     </div>
     <div class="detail-box for_man-5">
         <button class="close">关闭</button>
-        <h3>LT12限量系列灰色T恤衫</h3>
-        <img src="images/product/01.png" alt="">
+        <h3>LT12限量系列黑色T恤衫</h3>
+        <img src="images/product/05.png" alt="">
         <span class="price">价格：590 元</span>
         <a target="_blank" href="http://item.jd.com/1543278289.htm">立即购买</a>
     </div>
     <div class="detail-box for_man-6">
         <button class="close">关闭</button>
-        <h3>LT12限量系列灰色T恤衫</h3>
-        <img src="images/product/01.png" alt="">
-        <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.htm">立即购买</a>
+        <h3>LT12限量系列黑色POLO衫</h3>
+        <img src="images/product/06.png" alt="">
+        <span class="price">价格：990 元</span>
+        <a target="_blank" href="http://item.jd.com/1543274075.html">立即购买</a>
     </div>
     <!-- PRODUCT DETAIL -->
     <!-- PRODUCT DETAIL END -->
@@ -191,7 +217,7 @@
     <!-- END LOADING PAGE -->
 
     <!-- Portrait -->
-    <!-- <div class="portrait-box">
+    <div class="portrait-box">
         <h1><a href="javascript:;"><img src="css/img/logo.png" alt=""></a></h1>
         <div class="gif">
             <p>转至横屏，体验更佳</p>
@@ -202,7 +228,7 @@
             <a target="_blank" href="javascript:;">ICP</a>
         </footer>
 
-    </div> -->
+    </div>
     <!-- END PORTRAIT -->
 
 <script>
@@ -218,48 +244,78 @@
         
         /*main*/
         $(".main").css({width: ww, height: wh});
-        $(".intro-partie").css({width: ww*0.62, height: wh});
+        $(".ribbon").css({height: ww*0.015})
+        $(".intro-partie").css({width: ww, height: wh});
         $("#equipe .block-content .content-partie .intro-partie .col").css({
-            width: (ww*0.62-30)/3,
-            height: (ww*0.62-30)/1.5
+            width: ww*0.39,
+            height: ww*0.429-10
         });
         $("#equipe .block-content .content-partie .intro-partie .col#man-1").css({
-            bottom: (ww*0.62-30)/4
+            marginLeft: -ww*0.128
         });
         $("#equipe .block-content .content-partie .intro-partie .col#man-2").css({
-            marginLeft: -(ww*0.62-30)/6,
-            bottom: (ww*0.62-30)/3.5
+            left: ww*0.15
         });
         $("#equipe .block-content .content-partie .intro-partie .col#man-3").css({
-            bottom: (ww*0.62-30)/4
+            left: ww*0.43
+        });
+        $("#equipe .block-content .content-partie .intro-partie .col#man-4").css({
+            bottom: ww*0.132,
+            left: ww*0.06
         });
         $("#equipe .block-content .content-partie .intro-partie .col#man-5").css({
-            marginLeft: -(ww*0.62-30)/6
+            bottom: ww*0.132,
+            left: ww*0.29
         });
-        $("#equipe .block-content .content-partie .intro-partie footer").css({
-            width: ww,
-            height: (ww*0.62-30)/3.5,
-            left: -(ww*0.19)
+        $("#equipe .block-content .content-partie .intro-partie .col#man-6").css({
+            bottom: ww*0.132,
+            left: ww*0.6
+        });
+        $(".click-fix-4").css({
+            width: ww*0.13,
+            height: ww*0.2,
+            bottom: ww*0.25,
+            left: ww*0.22
+        });
+        $(".click-fix-5").css({
+            width: ww*0.13,
+            height: ww*0.2,
+            bottom: ww*0.25,
+            left: ww*0.48
+        });
+        $(".click-fix-6").css({
+            width: ww*0.13,
+            height: ww*0.2,
+            bottom: ww*0.25,
+            left: ww*0.78
+        });
+        $(".bench").css({height: ww*0.16});
+
+        $(".racket").css({
+            width: ww*0.11
         });
 
         /*detail-box*/
         $(".detail-box").css({
             width: ww*0.3,
-            height: ww*0.4,
-            maxHeight: wh-20
+            height: ww*0.42,
+            bottom: ww*0.05
         });
         $(".detail-box img").css({
-            height: ww*0.45-40-14-20-14-10-35,
-            maxHeight: wh-20-40-14-20-14-10-35
+            height: ww*0.4-89
         });
-        $(".for_man-1, .for_man-4").css({marginLeft: -((ww*0.62-30)/6)});
-        $(".for_man-3, .for_man-6").css({marginRight: -((ww*0.62-30)/6)});
-        if(ww<481) {
-            $(".detail-box img").css({
-                height: ww*0.3-40-14-20-14-10-55,
-                maxHeight: wh-20-40-14-20-14-10-55
-            });
-        }
+        $(".detail-box a").css({
+            height: ww*0.034,
+            lineHeight: ww*0.034+'px'
+        });
+        // $(".for_man-1, .for_man-4").css({marginLeft: -((ww*0.62-30)/6)});
+        // $(".for_man-3, .for_man-6").css({marginRight: -((ww*0.62-30)/6)});
+        // if(ww<481) {
+        //     $(".detail-box img").css({
+        //         height: ww*0.3-40-14-20-14-10-55,
+        //         maxHeight: wh-20-40-14-20-14-10-55
+        //     });
+        // }
         
     };
     setContentSize();
@@ -272,7 +328,7 @@
     $("#equipe .block-content .content-partie .intro-partie .col").click(function(){
         var _id=$(this).attr('id');
         var _detail = $('.detail-box.for_'+_id);
-        $(".main").addClass("white");
+        $(".detail-box").removeClass("show");
         $(this).siblings(".col").addClass("blur");
         $(this).siblings(".col").removeClass("active");
         $(this).removeClass("blur");
@@ -283,6 +339,31 @@
         $(".detail-box").removeClass("show");
         $(".main").removeClass("white");
         $("#equipe .block-content .content-partie .intro-partie .col").removeClass("active").removeClass("blur");
+    });
+
+    $(".click-fix-4").click(function(){
+        $(".detail-box").removeClass("show");
+        $(".col#man-4").siblings(".col").addClass("blur");
+        $(".col#man-4").siblings(".col").removeClass("active");
+        $(".col#man-4").removeClass("blur");
+        $(".col#man-4").addClass("active");
+        $(".detail-box.for_man-4").addClass("show");
+    });
+    $(".click-fix-5").click(function(){
+        $(".detail-box").removeClass("show");
+        $(".col#man-5").siblings(".col").addClass("blur");
+        $(".col#man-5").siblings(".col").removeClass("active");
+        $(".col#man-5").removeClass("blur");
+        $(".col#man-5").addClass("active");
+        $(".detail-box.for_man-5").addClass("show");
+    });
+    $(".click-fix-6").click(function(){
+        $(".detail-box").removeClass("show");
+        $(".col#man-6").siblings(".col").addClass("blur");
+        $(".col#man-6").siblings(".col").removeClass("active");
+        $(".col#man-6").removeClass("blur");
+        $(".col#man-6").addClass("active");
+        $(".detail-box.for_man-6").addClass("show");
     });
 
     /*menu*/
@@ -307,7 +388,7 @@
         setContentSize();
     });
 </script>
-<script type="text/javascript" src="js/common.js"></script>
+<!-- <script type="text/javascript" src="js/common.js"></script> -->
 </body>
 
 </html>
