--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     /*game guide*/
     setTimeout(function(){
         $(".game-guide").addClass("show");
-    },3000);
+    },500);
     $(".game-guide .close").click(function(){
         $(".game-guide").removeClass("show");
     });
@@ -420,7 +420,7 @@
         $(this).toggleClass("show");
     });
 </script>
-<!-- <script type="text/javascript" src="js/common.js"></script> -->
+<script type="text/javascript" src="js/common.js"></script>
 </body>
 
 </html>
