--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
         <div class="racket"><img src="css/img/racket.png" alt=""></div>
         <div id="tennisball" style="z-index:999;position:absolute;">
-            <img style="width:50px;height:50px;" src="css/img/tennis.png">
+            <img style="width:30px;height:30px;" src="css/img/tennis.png">
         </div>
     </section>
     <div class="main-mask"></div>
@@ -224,7 +224,7 @@
     <!-- END LOADING PAGE -->
 
     <!-- GAME GUIDE -->
-    <div class="game-guide">
+    <div class="game-guide show">
         <div class="inner">
             <button class="close">关闭</button>
             <p>
