add menu-button animation

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         $(".tc").removeClass("show");
     });
 </script>
-<!-- <script type="text/javascript" src="js/common.js"></script> -->
+<script type="text/javascript" src="js/common.js"></script>
 </body>
 
 </html>
