change product title

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </div>
     <div class="detail-box for_man-3">
         <button class="close">关闭</button>
-        <h3>限量系列白色T恤衫</h3>
+        <h3>LT12限量系列白色T恤衫</h3>
         <div class="pic">
             <img src="images/product/03.png" alt="">
         </div>
